# advent-of-code

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  TODO.md
day01/: Cargo.toml  README.md
day01/benches/: hashmap_vs_naive.rs  naive_vs_hashmap.rs
day01/src/: lib.rs  main.rs
day01/tests/: day01.rs
day02/: Cargo.toml  notes.md
day02/benches/: single_pass_vs_functional.rs
day02/src/: lib.rs  main.rs
day02/tests/: day02.rs
day03/: Cargo.toml
day03/src/: lib.rs  main.rs
day03/tests/: day03.rs
day04/: Cargo.toml
day04/src/: lib.rs  main.rs
day04/tests/: day04.rs
day05/: Cargo.toml
day05/benches/: algorithmic_scaling.rs  naive_vs_optimized.rs
day05/src/: lib.rs  main.rs
day05/tests/: day05.rs
shared/: Cargo.toml
shared/src/: benchmarking.rs  input.rs  lib.rs  plotting.rs
