[workspace]
members = ["day*", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1.0"
plotters = { version = "0.3.7", default-features = false, features = [
  "svg_backend",
  "line_series",
] }

# Optimized release profile for better performance
[profile.release]
lto = true        # Link-time optimization for better performance
codegen-units = 1 # Better optimization at cost of compile time
panic = "abort"   # Smaller binaries, no unwinding overhead
