[package]
name = "day05"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "naive_vs_optimized"
harness = false
